cabal-version:      2.2
name:               eclair-lang
version:            0.2.0
synopsis:
  Eclair: an experimental and minimal Datalog that compiles to LLVM.

description:
  Eclair: an experimental and minimal Datalog that compiles to LLVM.

category:           Compiler
homepage:           https://github.com/luc-tielen/eclair-lang
author:             Luc Tielen
maintainer:         luc.tielen@gmail.com
copyright:          Luc Tielen, 2023
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  cbits/semantic_analysis.dl
  CHANGELOG.md
  LICENSE
  README.md

flag debug
  description: Enables stack traces.
  manual:      True
  default:     False

library
  -- cabal-fmt: expand lib
  exposed-modules:
    Eclair
    Eclair.ArgParser
    Eclair.AST.Analysis
    Eclair.AST.Codegen
    Eclair.AST.IR
    Eclair.AST.Lower
    Eclair.AST.Transforms
    Eclair.AST.Transforms.ConstantFolding
    Eclair.AST.Transforms.DeadCodeElimination
    Eclair.AST.Transforms.NormalizeRules
    Eclair.AST.Transforms.RemoveAliases
    Eclair.AST.Transforms.ReplaceStrings
    Eclair.Common.Config
    Eclair.Common.Extern
    Eclair.Common.Id
    Eclair.Common.Literal
    Eclair.Common.Location
    Eclair.Common.Operator
    Eclair.Common.Pretty
    Eclair.Comonads
    Eclair.EIR.IR
    Eclair.EIR.Lower
    Eclair.EIR.Lower.API
    Eclair.EIR.Lower.Codegen
    Eclair.EIR.Lower.Externals
    Eclair.Error
    Eclair.LLVM.Allocator.Common
    Eclair.LLVM.Allocator.Malloc
    Eclair.LLVM.Allocator.Page
    Eclair.LLVM.BTree
    Eclair.LLVM.BTree.Bounds
    Eclair.LLVM.BTree.Compare
    Eclair.LLVM.BTree.Create
    Eclair.LLVM.BTree.Destroy
    Eclair.LLVM.BTree.Find
    Eclair.LLVM.BTree.Insert
    Eclair.LLVM.BTree.Iterator
    Eclair.LLVM.BTree.Size
    Eclair.LLVM.BTree.Types
    Eclair.LLVM.Codegen
    Eclair.LLVM.Config
    Eclair.LLVM.Externals
    Eclair.LLVM.Hash
    Eclair.LLVM.HashMap
    Eclair.LLVM.Metadata
    Eclair.LLVM.Symbol
    Eclair.LLVM.SymbolTable
    Eclair.LLVM.Table
    Eclair.LLVM.Template
    Eclair.LLVM.Vector
    Eclair.Parser
    Eclair.RA.Codegen
    Eclair.RA.IndexSelection
    Eclair.RA.IR
    Eclair.RA.Lower
    Eclair.RA.Transforms
    Eclair.RA.Transforms.HoistConstraints
    Eclair.Souffle.IR
    Eclair.Transform
    Eclair.TypeSystem
    Prelude

  hs-source-dirs:     lib
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-patterns -fhide-source-paths
    -fno-show-valid-hole-fits -fno-sort-valid-hole-fits

  cxx-options:        -std=c++17 -D__EMBEDDED_SOUFFLE__ -Wall
  build-depends:
    , algebraic-graphs             <1
    , base                         >=4.7   && <5
    , bytestring                   >=0.11  && <0.12
    , comonad                      >=5     && <6
    , containers                   <1
    , dependent-sum                >=0.6   && <1
    , diagnose                     >=2.3   && <2.4
    , dlist                        >=1     && <2
    , exceptions                   >=0.10  && <0.11
    , extra                        >=1     && <2
    , llvm-codegen
    , megaparsec                   >=9     && <10
    , mmorph                       >=1     && <2
    , mtl                          >=2     && <3
    , optparse-applicative         >=0.16  && <0.17
    , parser-combinators           >=1.3   && <1.4
    , prettyprinter                >=1.7   && <1.8
    , prettyprinter-ansi-terminal  >=1     && <2
    , recursion-schemes            >=5     && <6
    , relude                       >=1.2   && <1.3
    , rock                         >=0.3   && <0.4
    , souffle-haskell              ==4.0.0
    , text                         >=2     && <3
    , transformers                 <1
    , vector                       >=0.12  && <0.13

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

  if os(osx)
    extra-libraries: c++

  if flag(debug)
    ghc-options:   -fplugin=StackTrace.Plugin
    build-depends: haskell-stack-trace-plugin ==0.1.3.0

  if os(linux)
    extra-libraries: stdc++

executable eclair
  main-is:            Main.hs
  other-modules:      Paths_eclair_lang
  autogen-modules:    Paths_eclair_lang
  hs-source-dirs:     src/eclair
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-patterns -fhide-source-paths
    -fno-show-valid-hole-fits -fno-sort-valid-hole-fits -threaded
    -rtsopts -with-rtsopts=-N

  cxx-options:        -std=c++17 -D__EMBEDDED_SOUFFLE__
  build-depends:
    , algebraic-graphs             <1
    , base                         >=4.7   && <5
    , bytestring                   >=0.11  && <0.12
    , comonad                      >=5     && <6
    , containers                   <1
    , dependent-sum                >=0.6   && <1
    , diagnose                     >=2.3   && <2.4
    , directory                    >=1     && <2
    , dlist                        >=1     && <2
    , eclair-lang
    , exceptions                   >=0.10  && <0.11
    , extra                        >=1     && <2
    , llvm-codegen
    , megaparsec                   >=9     && <10
    , mmorph                       >=1     && <2
    , mtl                          >=2     && <3
    , optparse-applicative         >=0.16  && <0.17
    , parser-combinators           >=1.3   && <1.4
    , prettyprinter                >=1.7   && <1.8
    , prettyprinter-ansi-terminal  >=1     && <2
    , process                      >=1.6   && <1.7
    , recursion-schemes            >=5     && <6
    , relude                       >=1.2   && <1.3
    , rock                         >=0.3   && <0.4
    , souffle-haskell              ==4.0.0
    , text                         >=2     && <3
    , transformers                 <1
    , vector                       >=0.12  && <0.13

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

  if os(osx)
    extra-libraries: c++

  if flag(debug)
    ghc-options:   -fplugin=StackTrace.Plugin
    build-depends: haskell-stack-trace-plugin ==0.1.3.0

executable eclair-lsp-server
  main-is:            Main.hs
  other-modules:
    Eclair.LSP
    Eclair.LSP.Diagnostics
    Eclair.LSP.Handlers
    Eclair.LSP.Monad
    Paths_eclair_lang

  autogen-modules:    Paths_eclair_lang
  hs-source-dirs:     src/lsp
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-patterns -fhide-source-paths
    -fno-show-valid-hole-fits -fno-sort-valid-hole-fits -threaded
    -rtsopts -with-rtsopts=-N -Wall

  cxx-options:        -std=c++17 -D__EMBEDDED_SOUFFLE__
  build-depends:
    , aeson
    , algebraic-graphs             <1
    , base                         >=4.7   && <5
    , bytestring                   >=0.11  && <0.12
    , comonad                      >=5     && <6
    , containers                   <1
    , data-default                 >=0.7   && <0.8
    , dependent-sum                >=0.6   && <1
    , diagnose                     >=2.3   && <2.4
    , directory                    >=1     && <2
    , dlist                        >=1     && <2
    , eclair-lang
    , exceptions                   >=0.10  && <0.11
    , extra                        >=1     && <2
    , filepath                     >=1.4   && <1.5
    , hslogger                     >=1.3   && <1.4
    , lens                         >=5.2   && <5.3
    , llvm-codegen
    , lsp                          >=1.4   && <1.5
    , lsp-types                    >=1.4   && <1.5
    , megaparsec                   >=9     && <10
    , mmorph                       >=1     && <2
    , mtl                          >=2     && <3
    , optparse-applicative         >=0.16  && <0.17
    , parser-combinators           >=1.3   && <1.4
    , prettyprinter                >=1.7   && <1.8
    , prettyprinter-ansi-terminal  >=1     && <2
    , recursion-schemes            >=5     && <6
    , relude                       >=1.2   && <1.3
    , rock                         >=0.3   && <0.4
    , rope-utf16-splay             >=0.4   && <0.5
    , souffle-haskell              ==4.0.0
    , text                         >=2     && <3
    , transformers                 <1
    , vector                       >=0.12  && <0.13

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

  if os(osx)
    extra-libraries: c++

  if flag(debug)
    ghc-options:   -fplugin=StackTrace.Plugin
    build-depends: haskell-stack-trace-plugin ==0.1.3.0

test-suite eclair-lsp-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Paths_eclair_lang
  autogen-modules:    Paths_eclair_lang
  hs-source-dirs:     tests/lsp
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-patterns -fhide-source-paths
    -fno-show-valid-hole-fits -fno-sort-valid-hole-fits

  cxx-options:        -std=c++17 -D__EMBEDDED_SOUFFLE__
  build-tool-depends: eclair-lang:eclair-lsp-server
  build-depends:
    , algebraic-graphs             <1
    , base                         >=4.7   && <5
    , bytestring                   >=0.11  && <0.12
    , comonad                      >=5     && <6
    , containers                   <1
    , dependent-sum                >=0.6   && <1
    , diagnose                     >=2.3   && <2.4
    , dlist                        >=1     && <2
    , eclair-lang
    , exceptions                   >=0.10  && <0.11
    , extra                        >=1     && <2
    , hspec                        >=2.6.1 && <3.0.0
    , llvm-codegen
    , lsp                          >=1.4   && <1.5
    , lsp-test                     >=0.14  && <0.15
    , lsp-types                    >=1.4   && <1.5
    , megaparsec                   >=9     && <10
    , mmorph                       >=1     && <2
    , mtl                          >=2     && <3
    , optparse-applicative         >=0.16  && <0.17
    , parser-combinators           >=1.3   && <1.4
    , prettyprinter                >=1.7   && <1.8
    , prettyprinter-ansi-terminal  >=1     && <2
    , recursion-schemes            >=5     && <6
    , relude                       >=1.2   && <1.3
    , rock                         >=0.3   && <0.4
    , rope-utf16-splay             >=0.4   && <0.5
    , souffle-haskell              ==4.0.0
    , text                         >=2     && <3
    , transformers                 <1
    , vector                       >=0.12  && <0.13

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

  if os(osx)
    extra-libraries: c++

  if flag(debug)
    ghc-options:   -fplugin=StackTrace.Plugin
    build-depends: haskell-stack-trace-plugin ==0.1.3.0

test-suite eclair-test
  type:               exitcode-stdio-1.0
  main-is:            test.hs
  other-modules:
    Paths_eclair_lang
    Test.Eclair.ArgParserSpec
    Test.Eclair.LLVM.HashSpec
    Test.Eclair.RA.IndexSelectionSpec

  autogen-modules:    Paths_eclair_lang
  hs-source-dirs:     tests/eclair
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-patterns -fhide-source-paths
    -fno-show-valid-hole-fits -fno-sort-valid-hole-fits

  cxx-options:        -std=c++17 -D__EMBEDDED_SOUFFLE__
  build-depends:
    , algebraic-graphs             <1
    , base                         >=4.7   && <5
    , bytestring                   >=0.11  && <0.12
    , comonad                      >=5     && <6
    , containers                   <1
    , dependent-sum                >=0.6   && <1
    , diagnose                     >=2.3   && <2.4
    , dlist                        >=1     && <2
    , eclair-lang
    , exceptions                   >=0.10  && <0.11
    , extra                        >=1     && <2
    , filepath                     >=1     && <2
    , hedgehog                     >=1     && <2
    , hspec                        >=2.6.1 && <3.0.0
    , hspec-hedgehog               <1
    , llvm-codegen
    , megaparsec                   >=9     && <10
    , mmorph                       >=1     && <2
    , mtl                          >=2     && <3
    , neat-interpolation           <1
    , optparse-applicative         >=0.16  && <0.17
    , parser-combinators           >=1.3   && <1.4
    , prettyprinter                >=1.7   && <1.8
    , prettyprinter-ansi-terminal  >=1     && <2
    , recursion-schemes            >=5     && <6
    , relude                       >=1.2   && <1.3
    , rock                         >=0.3   && <0.4
    , silently                     >=1.2   && <1.3
    , souffle-haskell              ==4.0.0
    , text                         >=2     && <3
    , transformers                 <1
    , vector                       >=0.12  && <0.13

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010

  if os(osx)
    extra-libraries: c++

  if flag(debug)
    ghc-options:   -fplugin=StackTrace.Plugin
    build-depends: haskell-stack-trace-plugin ==0.1.3.0
